# Hello_Example

./: gradle.properties  settings.gradle
.github/workflows/: android-build.yml
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt  hello.cpp  main.cpp  translated_opengles.cpp  translated_opengles.h
android/src/main/java/com/ariasaproject/example/: HelloWorld.java
android/src/main/res/layout/: activity_main.xml
android/src/main/res/values/: strings.xml  styles.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hello.cpp  main.cpp
app/src/main/java/com/ariasaproject/example/: HelloWorld.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: styles.xml
core/: mainListener.cpp  mainListener.h  translatedGraphicsFunction.h
